# prismal-server

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: a2a.md  auth.md  running.md  tenancy.md
specs/reference-host-bootstrap/: ARCHITECTURE.md  PLAN.md  SPEC.md  TASKS.md
src/prismal_server/: __init__.py  app.py  config.py  deps.py  errors.py  streaming.py
src/prismal_server/auth/: __init__.py  base.py  bearer.py  noauth.py  oidc.py
src/prismal_server/routes/: __init__.py  a2a.py  health.py  threads.py
tests/: conftest.py
tests/contract/: test_engine_seams.py  test_smoke.py
tests/unit/: test_a2a.py  test_app.py  test_auth.py  test_config.py  test_deps.py  test_errors.py  test_health.py  test_import_guard.py  test_openapi.py  test_scaffold.py  test_streaming.py  test_threads.py
